Fixing The Alignment Issue Done

--- a/index.css
+++ b/index.css
@@ -532,7 +532,7 @@ body {
 	/* grid-template-columns: 2em repeat(2, minmax(0, 40rem)) 2em; */
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
 	max-width: 50ch;
 }
 
@@ -620,7 +620,7 @@ body {
 	}
 
 	.destination-meta {
-		--gap: 6rem;
+		--gap: min(6vw, 6rem);
 		justify-content: start;
 	}
 }
